# cli

./: .release-please-manifest.json  CHANGELOG.md  Cargo.toml  release-please-config.json
.github/workflows/: a.yml  release-please.yml  release.yml
cli/: Cargo.toml  build.rs
rivet-cli/: Cargo.toml
