[package]
name = "rivet-cli"
version = "1.4.0"
authors = ["Rivet Gaming, Inc. <developer@rivet.gg>"]
edition = "2018"
license = "MIT"
description = "Managed game servers, matchmaking, and DDoS mitigation that lets you focus on building your game."
homepage = "https://rivet.gg"
repository = "https://github.com/rivet-gg/cli"
build = "build.rs"

